Fix apple pay button alignment on checkout page to center

--- a/assets/css/stripe-apple-pay.less
+++ b/assets/css/stripe-apple-pay.less
@@ -12,10 +12,12 @@
 
 .woocommerce-checkout {
 	.apple-pay-button {
-		width: 30%;
+		width: 20%;
 		height: 50px;
 		margin: 0 auto;
 		margin-bottom: 20px;
+		display: block !important;
+		visibility: hidden;
 	}
 }
 
@@ -29,7 +31,7 @@
 }
 
 .single-product .apple-pay-button {
-	max-width: 160px;
+	max-width: 20%;
 	float: right;
 	margin-right: 10px;
 }
